--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="css/normalize.css" />
@@ -8,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum|PT+Sans&display=swap" rel="stylesheet">
   <title>Интернет-магазин Техномарт</title>
 </head>
-
 <body class="main-page">
   <header class="header-page">
     <section class="header-top">
@@ -17,15 +15,14 @@
         <h1 class="incognito">Интернет-магазин Техномарт</h1>
         <div class="search-block">
           <form class="header-search">
-            <input type="search" name="search" placeholder="Поиск:">
+            <input type="search" name="search" id="search" placeholder="Поиск:">
+            <label class="search-icon" for="search"></label>
           </form>
         </div>
         <ul class="header-top-menu">
-          <li><a href="#" class="bookmarks"><img src="img/icon-bookmark.svg" alt="Иконка закладки" width="17"
-                height="17" />Закладки:<span>0</span></a></li>
-          <li><a href="#" class="addtocart"><img src="img/icon-cart.svg" alt="Иконка корзины" width="17"
-                height="17" />Корзина:<span>0</span></a></li>
-          <li><a href="#" class="make-order">Оформить заказ</a></li>
+          <li><a href="#" class="bookmarks"><span>Закладки: 0</span></a></li>
+          <li><a href="#" class="addtocart"><span>Корзина: 0</span></a></li>
+          <li><a href="#" class="make-order"><p>Оформить заказ</p></a></li>
         </ul>
       </div>
     </section>
@@ -76,57 +73,63 @@
     <section class="colored-blocks">
       <div class="container flex">
         <h3 class="incognito">Селектор товаров и доставка</h3>
-          <div class="blocks-and-slider">
-            <ul>
-              <li class="new-materials">
-                <h3>Материалы</h3>
-                <a class="blocks-promo" href="#">На любой вкус</a>
-              </li>
-              <li class="tools">
-                <h3>Инструмент</h3>
-                <a class="blocks-promo" href="#">На все случаи</a>
-              </li>
-            </ul>
-              <div class="slider">
-                <input type="radio" name="switch" id="btn1" checked>
-                <input type="radio" name="switch" id="btn2">
-                <div class="switch">
-                  <label for="btn1"></label>
-                  <label for="btn2"></label>
+        <div class="blocks-and-slider">
+          <ul>
+            <li class="new-materials">
+              <h3>Материалы</h3>
+              <a class="blocks-promo" href="#">На любой вкус</a>
+            </li>
+            <li class="tools">
+              <h3>Инструмент</h3>
+              <a class="blocks-promo" href="#">На все случаи</a>
+            </li>
+          </ul>
+          <div class="slider">
+            <input type="radio" name="switch" id="btn1" checked>
+            <input type="radio" name="switch" id="btn2">
+            <div class="switch">
+              <label for="btn1"></label>
+              <label for="btn2"></label>
+            </div>
+            <div class="slides">
+              <div class="slider-inner">
+                <span id="item-1"></span>
+                <span id="item-2"></span>
+                <div class="carousel-item item-1">
+                  <h2 class="slider-drills">ДРЕЛИ</h2>
+                  <p>Соседям на радость!</p>
+                  <a class="arrow arrow-prev" href="#item-2"></a>
+                  <a class="arrow arrow-next" href="#item-2"></a>
+                  <a class="btn-open" href="catalog.html">Открыть каталог</a>
                 </div>
-                <div class="slider-inner">
-                  <div class="slides">
-                    <div class="slide-itself">
-                    <img src="img/slide-image.jpg">
-                    <h3>ДРЕЛИ</h3>
-                    <p class="slider-sub">Соседям на радость!</p>
-                    <a href="/catalog.html" class="btn-open">Открыть каталог</a>
-                     </div>
-                     <div class="slide-itself">
-                    <img src="img/slide-image2.jpg">
-                    <a class="btn-open">Открыть каталог</a>
-                  </div>
-                  </div>
+                <div class="carousel-item item-2">
+                  <h2 class="slider-drills">ПЕРФОРАТОРЫ</h2>
+                  <p>Настоящие мужские игрушки</p>
+                  <a class="arrow arrow-prev" href="#item-1"></a>
+                  <a class="arrow arrow-next" href="#item-1"></a>
+                  <a class="btn-open" href="catalog.html">Открыть каталог</a>
                 </div>
               </div>
-          </div>
-          <div class="right-blocks">
-            <ul>
-              <li class="equipment">
-                <h3>Техника</h3>
-                <a class="blocks-promo" href="#">Для стройки</a>
-              </li>
-              <li class="discounts">
-                <h3>Скидки 50%</h3>
-                <a class="blocks-promo" href="#">На 350 товаров</a>
-              </li>
-              <li class="delivery">
-                <h3>Доставка</h3>
-                <a class="blocks-promo" href="#">Бесплатно</a>
-              </li>
-            </ul>
+            </div>
           </div>
         </div>
+        <div class="right-blocks">
+          <ul>
+            <li class="equipment">
+              <h3>Техника</h3>
+              <a class="blocks-promo" href="#">Для стройки</a>
+            </li>
+            <li class="discounts">
+              <h3>Скидки 50%</h3>
+              <a class="blocks-promo" href="#">На 350 товаров</a>
+            </li>
+            <li class="delivery">
+              <h3>Доставка</h3>
+              <a class="blocks-promo" href="#">Бесплатно</a>
+            </li>
+          </ul>
+        </div>
+      </div>
       </div>
     </section>
     <section class="catalog-items">
@@ -227,51 +230,75 @@
         </ul>
       </div>
     </section>
-    <section class="ourservices">
+    <section class="services">
       <div class="container">
-        <h2>Сервисы</h2>
-        <p>
-          Хороший интернет-магазин отличается от плохого не только ценами! <br>
-          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+        <h2 class="services-header">СЕРВИСЫ</h2>
+        <p class="services-description">
+          Хороший интернет-магазин отличается от плохого не только ценами! <br> Мы стараемся изо всех сил, чтобы сделать
+          ваши покупки приятными.
         </p>
-        <ul>
-          <li><button>Доставка</button></li>
-          <li><button>Гарантия</button></li>
-          <li><button>Кредит</button></li>
-        </ul>
-        <ul class="service-selection">
-          <li>
-            <h3>Доставка</h3>
-            <p>
-              Мы с удовольствием доставим ваш товар прямо<br>
-              к вашему подъезду
-            </p>
-          </li>
-        </ul>
+        <div class="services-slider">
+          <input type="radio" class="invisible" id="button-1" name="toggle" checked>
+          <input type="radio" class="invisible" id="button-2" name="toggle">
+          <input type="radio" class="invisible" id="button-3" name="toggle">
+          <div class="services-toggle">
+            <label for="button-1">Доставка</label>
+            <label for="button-2">Гарантия</label>
+            <label for="button-3">Кредит</label>
+          </div>
+          <ul class="right-slider">
+            <li class="services-slides slide" id="slide1">
+              <span class="span-header">Доставка</span>
+              <p class="services-description-1">
+                Мы с удовольствием доставим ваш товар прямо<br> к вашему подъезду совершенно бесплатно!<br> Ведь мы
+                неплохо заработаем,<br> поднимая его на ваш этаж!
+              </p>
+            </li>
+            <li class="services-slides slide" id="slide2">
+              <span class="span-header">Гарантия</span>
+              <p class="services-description-2">
+                Если купленный у нас товар поломается или заискрит, <br> а также в случае пожара, спровоцированного его
+                возгоранием,
+                <br> вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br> сгоревший товар на новый.
+                <br> Дом уж восстановите как-нибудь сами.<br>
+              </p>
+            </li>
+            <li class="services-slides slide" id="slide3">
+              <span class="span-header">Кредит</span>
+              <p class="services-description-1">
+                Залезть в долговую яму стало проще!<br> Кредитные консультанты придут вам на помощь.
+              </p>
+              <a class="button-a" href="#">Отправить заявку</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
     <div class="company-contacts container">
       <section class="about-us">
-          <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
-          <p class="about-us-p1">
-              Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
-          </p>
-          <p class="about-us-p2">
-              Мы можем доставить ваш товар в самые отдаленные точки России!<br> Техномарт работает со многими транспортными компаниями:
-          </p>
-          <ul class="companies">
-              <li>Деловые линии</li>
-              <li>Автотрейдинг</li>
-              <li>ЖелДорЭкспедиция</li>
-          </ul>
-          <a class="details" href="#">Подробнее о компании</a>
+        <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
+        <p class="about-us-p1">
+          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
+          равнодушными любителей сэкономить на гастарбайтерах.
+        </p>
+        <p class="about-us-p2">
+          Мы можем доставить ваш товар в самые отдаленные точки России!<br> Техномарт работает со многими транспортными
+          компаниями:
+        </p>
+        <ul class="companies">
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a class="details" href="#">Подробнее о компании</a>
       </section>
       <section class="contacts">
-          <h2>Контакты</h2>
-          <p>
-              Вы можете забрать товар сами,<br> заехав в наш офис:
-          </p>
-          <a class="route" href="#"><img src="img/map.jpg" width="300" height="158" alt="Как к нам проехать"></a><br>
-          <a class="write-us" href="#">Заблудились? Напишите нам!</a>
+        <h2>Контакты</h2>
+        <p>
+          Вы можете забрать товар сами,<br> заехав в наш офис:
+        </p>
+        <a class="route" href="#"><img src="img/map.jpg" width="300" height="158" alt="Как к нам проехать"></a><br>
+        <a class="write-us" href="#">Заблудились? Напишите нам!</a>
       </section>
   </main>
   <footer>
@@ -326,39 +353,39 @@
 
   </footer>
 
-        <!--Ниже div для всплывающего окна формы связи-->
-        <div class="incognito">
-          <form class="contact-to-us">
-            <label for="yourname">Ваше имя:</label><br>
-            <input type="text" name="yourname" id="yourname" placeholder="Имя Фамилия"><br>
-            <label for="your-email">Ваш e-mail:</label><br>
-            <input type="email" name="your-email" id="your-email" placeholder="email@example.com"><br>
-            <label for="your-text">Текст письма:</label> <br>
-            <textarea name="your-text" id="your-text" rows="10" cols="50">В свободной форме</textarea>
-            <button type="submit">Отправить</button>
-          </form>
-        </div>
+  <!--Ниже div для всплывающего окна формы связи-->
+  <div class="incognito">
+    <form class="contact-to-us">
+      <label for="yourname">Ваше имя:</label><br>
+      <input type="text" name="yourname" id="yourname" placeholder="Имя Фамилия"><br>
+      <label for="your-email">Ваш e-mail:</label><br>
+      <input type="email" name="your-email" id="your-email" placeholder="email@example.com"><br>
+      <label for="your-text">Текст письма:</label> <br>
+      <textarea name="your-text" id="your-text" rows="10" cols="50">В свободной форме</textarea>
+      <button type="submit">Отправить</button>
+    </form>
+  </div>
 
-        <li class="incognito">
-          <h3>Гарантия</h3>
-          <p>
-            Если купленный у нас товар поломается или заискрит, <br>
-            а также в случае пожара, спровоцированного его возгоранием,<br>
-            вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>
-            сгоревший товар на новый.<br>
-            Дом уж восстановите как-нибудь сами.<br>
-          </p>
-        </li>
-        <li class="incognito">
-          <h3>Кредит</h3>
-          <p>
-            Залезть в долговую яму стало проще!<br>
-            Кредитные консультанты придут вам на помощь.
-          </p>
-          <a class="inquiry-button incognito" href="#">Отправить заявку</a>
-        </li>
-      
-    </div>
+  <li class="incognito">
+    <h3>Гарантия</h3>
+    <p>
+      Если купленный у нас товар поломается или заискрит, <br>
+      а также в случае пожара, спровоцированного его возгоранием,<br>
+      вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>
+      сгоревший товар на новый.<br>
+      Дом уж восстановите как-нибудь сами.<br>
+    </p>
+  </li>
+  <li class="incognito">
+    <h3>Кредит</h3>
+    <p>
+      Залезть в долговую яму стало проще!<br>
+      Кредитные консультанты придут вам на помощь.
+    </p>
+    <a class="inquiry-button incognito" href="#">Отправить заявку</a>
+  </li>
+
+  </div>
 
 </body>
 
